# researches_admin_system

./: Dockerfile  README.md  check_connections.py  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
core/: admin.py  admin_setup.py  apps.py  routers.py
cvlac/: admin.py  apps.py  models.py  routers.py
gruplac/: admin.py  apps.py  models.py  routers.py
integration/: admin.py  apps.py  forms.py  models.py  routers.py  urls.py  views.py
integration/migrations/: 0001_initial.py
research_admin/: settings.py  urls.py  wsgi.py
researches_admin_system/: urls.py
static/css/: admin-theme.css  custom.css  utilities.css  variables.css
templates/admin/: base.html  base_site.html  buscar_investigador.html  index.html  seleccionar_grupo.html
templates/admin/integration/: buscar_investigador.html  seleccionar_grupo.html
