[tool.poetry]
name = "researches-admin-system"
version = "0.1.0"
description = ""
authors = ["jose9806"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
python-dotenv = "^1.1.0"
django-debug-toolbar = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
